@@ -3,8 +3,13 @@
 (??/06/2025) - version 0.9.1
 
 - BRUTER_USE_GENERIC removed.
-- new macro MACRO_BRUTER, a optional flexible layer to use bruter, requires C11 and GCC/Clang(or C23);
+- new macro BRUTER_NO_IMPLEMENTATION, it will make bruter.h not define any function, just declare them;
 - BRUTER_TYPES removed, each push, insert, unshift and set functions now have a type parameter;
+- new macro MACRO_BRUTER, a optional flexible layer to use bruter, requires C11 and GCC/Clang(or C23);
+- MACRO_BRUTER use _Generic and such, so it is not compatible with C99, but it is compatible with C11(+gcc) and C23(pure);
+- MACRO_BRUTER implements the following macro: bnew, bfree, bpush, bunshift, binsert, bset, bfree, bdouble, bhalf, bpop, bshift, bremove, bfast_remove, bswap, bfind_key, breverse, bcopy, bconcat, bcall, bget, bget_key, bset_key, bget_type, bset_type, bfind and bvalue;
+- most are just a macro to the default function, but some of them have optional args and overloaded versions;
+- TODO: add BruterValue overload to the MACRO_BRUTER _Generics;
 
 (27/06/2025) - version 0.9.0
 
